# little-rusty

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml
assets/: 9-5_mailbox.fbx
assets/9-5_mailbox/: 9-5_mailbox.gltf
src/: audio.rs  gltf_loader.rs  input.rs  main.rs  particles.rs  solid_lambert.wgsl  types.rs  wireframe.wgsl
src/shaders/: fire.wgsl  particle.wgsl
