[package]
name = "little-rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "28.0.0"
winit = { version = "0.30.8", features = ["android-native-activity"] }
bytemuck = { version = "1.0", features = ["derive"] }
glam = "0.29"
gltf = "1.4"
image = "0.24"
